--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: python
 python:
     - 3.6
-# command to run tests
-script: pytest
+before_install:
+    - sudo apt-get update
+    - sudo apt-get -y install python-pip
+    - sudo pip install --upgrade pip
+    - pip install --upgrade pip
+    - pip install pep8
+    - pip install autopep8
+
+script:
+    # Run pep8 on all .py files in all subfolders
+    # We must ignore E402 module level import not at top of file
+    # because of use case sys.path.append('..'); import <module>
+    - num_errors_before=`find . -name \*.py -exec pep8 --ignore=E402 {} + | wc -l`
+    - echo $num_errors_before
