--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
     # Run pep8 on all .py files in all subfolders
     # We must ignore E402 module level import not at top of file
     # because of use case sys.path.append('..'); import <module>
-    - num_errors_before=`find . -name \*.py -exec pep8 --statistics
+    - num_errors_before=`find . -name \*.py -exec pep8 --ignore=E402 {} + | wc -l`
     - echo $num_errors_before
