--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 
 script:
-    # Run pep8 on all .py files in all subfolders
+    # Run pycodestyle on all .py files in all subfolders
     # We must ignore E402 module level import not at top of file
     # because of use case sys.path.append('..'); import <module>
     - num_errors_before=`find . -name \*.py -exec pycodestyle --ignore=E402 {} + `
